Create-Lobby-Screen implemented
