# Server/controllers/Development.js
@@ -7,10 +7,10 @@ module.exports.createUser = function createUser(req, res, next) {
   var user = req.swagger.params['user'].value;
   Development.createUser(user)
     .then(function (response) {
-      utils.writeJson(res, response);
+      utils.writeJson(res, response, 204);
     })
     .catch(function (response) {
-      utils.writeJson(res, utils.respondWithCode(400, response))
+      utils.writeJson(res, response)
     });
 };
 
@@ -27,7 +27,7 @@ module.exports.getGames = function getGames (req, res, next) {
     });
 };
 
-module.exports.getLobbies = function getLobbies(req,res,next){
+module.exports.getLobbies = function getLobbies(req, res, next){
   var offset = req.swagger.params['offset'].value;
   var limit = req.swagger.params['limit'].value;
   Development.getLobbies(offset, limit)
@@ -38,6 +38,20 @@ module.exports.getLobbies = function getLobbies(req,res,next){
       utils.writeJson(res, response);
     });
 }
+
+module.exports.createLobby = function getLobbies(req, res,next){
+  var lobby = req.swagger.params['lobby'].value;
+  Development.createLobby(lobby)
+    .then(function (response) {
+      console.log("Lobby: " + JSON.stringify(response));
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+}
+
+
 
 module.exports.getLobby = function getLobby (req, res, next) {
   var id = req.swagger.params['id'].value;
